[package]
name = "wacomctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
crossterm = "0.29.0"
evdev = "0.13.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync"]}
